modules/gdscript/tests/scripts/analyzer/errors/get_node_shorthand_within_non_node.gd
extends RefCounted

func test():
	var nope := $Node
	print("Cannot use $ without a Node base")
